# dta-crag

./: .env.example  .gitignore  BUILDLOG.md  CLAUDE.md  README.md  app.py  demo.py  main.py  pyproject.toml  requirements.txt  run_tests.bat  warmup.py
.claude/skills/: critic.md  generator.md  grader.md  retriever.md  tax_expert.md
src/: corpus.py  graph.py  logging_config.py  memory.py  nodes.py  prompts.py  retriever.py  supervisor.py
tests/: conftest.py  test_corpus.py  test_graph.py  test_memory.py  test_nodes.py  test_prompts.py  test_retriever.py
