[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dta-crag"
version = "0.1.0"
description = "Corrective RAG prototype for Dutch tax law Q&A"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.28.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "streamlit>=1.36.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Marks for slow tests that hit the real embedding model
markers = [
    "slow: tests that load the sentence-transformers model (deselect with -m 'not slow')",
]
# Show short test summary for failures and errors
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
